--- a/driver/config_cmake.h.in
+++ b/driver/config_cmake.h.in
@@ -4,6 +4,7 @@
 
 #cmakedefine01 USE_SSL
 #cmakedefine01 NO_OUTPUT_REDIRECT
+#cmakedefine01 USE_DEBUG_17
 
 #if !defined(UNICODE) && @UNICODE@
 #cmakedefine01 UNICODE
