--- a/vs/driver32w/driver32w.vcxproj
+++ b/vs/driver32w/driver32w.vcxproj
@@ -183,6 +183,7 @@
     <ClCompile Include="..\..\driver\handles.cpp" />
     <ClCompile Include="..\..\driver\info.cpp" />
     <ClCompile Include="..\..\driver\odbc.cpp" />
+    <ClCompile Include="..\..\driver\log.cpp" />
     <ClCompile Include="..\..\driver\result_set.cpp" />
     <ClCompile Include="..\..\driver\statement.cpp" />
     <ClCompile Include="..\..\driver\type_parser.cpp" />
