--- a/vs/driver32/driver32.vcxproj
+++ b/vs/driver32/driver32.vcxproj
@@ -188,6 +188,7 @@
     <ClCompile Include="..\..\driver\handles.cpp" />
     <ClCompile Include="..\..\driver\info.cpp" />
     <ClCompile Include="..\..\driver\odbc.cpp" />
+    <ClCompile Include="..\..\driver\log.cpp" />
     <ClCompile Include="..\..\driver\result_set.cpp" />
     <ClCompile Include="..\..\driver\statement.cpp" />
     <ClCompile Include="..\..\driver\config.cpp" />
