--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,7 +79,7 @@ endif ()
 option (UNICODE "Enable unicode (experimental)" 0)
 if (UNICODE)
     set(UNICODE 1)
-    add_definitions(-DUNICODE=1)
+    add_definitions(-DUNICODE=1 -D_UNICODE=1)
 else ()
     set(UNICODE 0)
 endif ()
