Improve logging, add some attributes, remove some throws

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,9 +11,9 @@ set (CXX_WARNING_FLAGS "-Wnon-virtual-dtor")
 
 set (CMAKE_CXX_STANDARD 14)
 # For iostream_debug_helpers.h :
-#if (CMAKE_BUILD_TYPE STREQUAL "Debug")
-#    set (CMAKE_CXX_STANDARD 17)
-#endif ()
+if (CMAKE_BUILD_TYPE STREQUAL "Debug" AND USE_DEBUG_17)
+    set (CMAKE_CXX_STANDARD 17)
+endif ()
 
 set (CMAKE_CXX_EXTENSIONS 0)
 set (CMAKE_CXX_STANDARD_REQUIRED         ON)
@@ -79,7 +79,7 @@ endif ()
 option (UNICODE "Enable unicode (experimental)" 0)
 if (UNICODE)
     set(UNICODE 1)
-    add_definitions(-DUNICODE=1)
+    add_definitions(-DUNICODE=1 -D_UNICODE=1)
 else ()
     set(UNICODE 0)
 endif ()
