--- a/driver/odbc.ini
+++ b/driver/odbc.ini
@@ -1,6 +1,6 @@
 # Place this file to ~/.odbc.ini or /etc/odbc.ini
 
-[Clickhouse]
+[clickhouse_localhost]
 Driver = Clickhouse
 Description = Clickhouse driver
 #DATABASE = default
