--- a/driver/ut/CMakeLists.txt
+++ b/driver/ut/CMakeLists.txt
@@ -19,7 +19,10 @@ if (NANOODBC_LIBRARY)
     target_link_libraries(clickhouse-odbc-nano ${NANOODBC_LIBRARY})
     add_dependencies(clickhouse-odbc-nano clickhouse-odbc)
     if (TEST_DSN)
-        add_test(NAME "clickhouse-odbc-nano" COMMAND "clickhouse-odbc-nano" "DSN=${TEST_DSN}")
+        add_test(NAME "clickhouse-odbc-nano" COMMAND clickhouse-odbc-nano DSN=${TEST_DSN})
+        if (NOT (CMAKE_BUILD_TYPE_UC STREQUAL "TSAN" OR CMAKE_BUILD_TYPE_UC STREQUAL "ASAN" OR CMAKE_BUILD_TYPE_UC STREQUAL "MSAN"))
+            add_test(NAME "clickhouse-odbc-nano-valgrind" COMMAND valgrind -v --leak-check=full --show-leak-kinds=all ${CMAKE_CURRENT_BINARY_DIR}/clickhouse-odbc-nano DSN=${TEST_DSN})
+        endif ()
     endif ()
     # gdb -ex "catch throw" -ex run --args ./clickhouse-odbc-nano DSN=clickhouse_localhost_system
 endif ()
