--- a/driver/odbc.ini
+++ b/driver/odbc.ini
@@ -3,9 +3,10 @@
 [clickhouse_localhost]
 Driver = Clickhouse
 Description = Clickhouse driver
-#DATABASE = default
-#SERVER = localhost
-#PORT = 8123
-#PROTO = http
+#server = localhost
+#database = default
+#uid = default
+#port = 8123
+#proto = http
 # Use https with 8443 port:
-#SSLMODE=require
+#sslmode = require
