--- a/driver/odbc.ini
+++ b/driver/odbc.ini
@@ -1,8 +1,11 @@
 # Place this file to ~/.odbc.ini or /etc/odbc.ini
 
+[ODBC Data Sources]
+clickhouse_localhost = Clickhouse
+
 [clickhouse_localhost]
-Driver = Clickhouse
-Description = Clickhouse driver
+driver = Clickhouse
+description = Clickhouse driver
 #server = localhost
 #database = default
 #uid = default
