--- a/driver/odbc.ini
+++ b/driver/odbc.ini
@@ -1,11 +1,15 @@
 # Place this file to ~/.odbc.ini or /etc/odbc.ini
 
+[ODBC Data Sources]
+clickhouse_localhost = Clickhouse
+
 [clickhouse_localhost]
-Driver = Clickhouse
-Description = Clickhouse driver
-#DATABASE = default
-#SERVER = localhost
-#PORT = 8123
-#PROTO = http
+driver = Clickhouse
+description = Clickhouse driver
+#server = localhost
+#database = default
+#uid = default
+#port = 8123
+#proto = http
 # Use https with 8443 port:
-#SSLMODE=require
+#sslmode = require
