--- a/driver/CMakeLists.txt
+++ b/driver/CMakeLists.txt
@@ -50,8 +50,9 @@ target_link_libraries(clickhouse-odbc
     ${ODBC_LIBRARIES}
 )
 
+target_link_libraries(clickhouse-odbc ${LTDL_LIBRARY}) # apple, linux + unixodbc
+
 if(APPLE)
-    target_link_libraries(clickhouse-odbc ${LTDL_LIBRARY})
 elseif (NOT WIN32)
     target_link_libraries(clickhouse-odbc -Wl,--version-script=${CMAKE_CURRENT_SOURCE_DIR}/linker_script)
 endif()
