--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ matrix:
     - compiler: gcc
 
 install:
-  - sudo apt-add-repository "deb http://archive.ubuntu.com/ubuntu bionic main universe"
+  - sudo apt-add-repository "deb http://archive.ubuntu.com/ubuntu artful main universe"
   - sudo apt-get update -q > build.log 2>&1 || (cat build.log && exit 1)
   - sudo apt-get install -y unixodbc-dev libssl-dev binutils libpoco-dev > build.log 2>&1 || (cat build.log && exit 1)
 
