--- a/driver/config_cmake.h.in
+++ b/driver/config_cmake.h.in
@@ -6,6 +6,8 @@
 #cmakedefine01 OUTPUT_REDIRECT
 #cmakedefine01 USE_DEBUG_17
 #cmakedefine01 ODBC_WCHAR
+#cmakedefine01 ODBC_IODBC
+#cmakedefine01 ODBC_UNIXODBC
 
 #cmakedefine ODBC_LIBRARIES "@ODBC_LIBRARIES@"
 #cmakedefine ODBC_INCLUDE_DIRECTORIES "@ODBC_INCLUDE_DIRECTORIES@"
