--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,11 @@ addons:
     sources: [ ubuntu-toolchain-r-test, llvm-toolchain-precise ]
     packages: [ gcc-7, g++-7, clang-5.0, ninja-build ]
 
+
+env
+    - UNICODE=0
+    - UNICODE=1
+
 matrix:
   include:
     - compiler: ": gcc-7"
@@ -24,10 +29,6 @@ matrix:
     - compiler: ": clang-5.0"
       before_install:
         - export CC="clang-5.0" CXX="clang++-5.0"
-    - before_install:
-        - export UNICODE=1
-    - before_install:
-        - export UNICODE=0
 
   exclude:
     - compiler: gcc
