--- a/driver/unixodbc.ini
+++ b/driver/unixodbc.ini
@@ -1,7 +1,15 @@
+# Place this file to ~/.odbcinst.ini or /etc/odbcinst.ini
+
 [ODBC Drivers]
 Clickhouse = Installed
+Clickhousew = Installed
 
 [Clickhouse]
 Description = Clickhouse ODBC Driver
 Driver      = libclickhouseodbc.so
 Setup       = libclickhouseodbc.so
+
+[Clickhousew]
+Description = Clickhouse ODBC Driver
+Driver      = libclickhouseodbcw.so
+Setup       = libclickhouseodbcw.so
