--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ matrix:
 install:
   - sudo apt-add-repository "deb http://archive.ubuntu.com/ubuntu artful main universe"
   - sudo apt-get update -q > build.log 2>&1 || (cat build.log && exit 1)
-  - sudo apt-get install -y unixodbc-dev libssl-dev binutils libpoco-dev > build.log 2>&1 || (cat build.log && exit 1)
+  - sudo apt-get install -y unixodbc-dev libssl-dev binutils libpoco-dev | tee build.log 2>&1 || (cat build.log && exit 1)
 
 script:
   - mkdir -p build
