--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ cache:
 addons:
   apt:
     sources: [ ubuntu-toolchain-r-test, llvm-toolchain-trusty ]
-    packages: [ gcc-7, g++-7, ninja-build, clang-5.0 ]
+    packages: [ gcc-7, g++-7, ninja-build, clang ]
 
 
 # TODO:
