USE_WRONG_STRING_LENGTH

--- a/contrib/CMakeLists.txt
+++ b/contrib/CMakeLists.txt
@@ -1,7 +1,7 @@
 if (CLICKHOUSE_ODBC_TEST)
     add_subdirectory (gtest)
     if (USE_INTERNAL_NANOODBC_LIBRARY)
-        # git clone --recursive https://github.com/lexicalunit/nanodbc.git
+        # git clone --recursive https://github.com/nanodbc/nanodbc.git
         set (NANODBC_DISABLE_EXAMPLES 1 CACHE INTERNAL "")
         set (NANODBC_DISABLE_LIBCXX 1 CACHE INTERNAL "")
         set (NANODBC_DISABLE_TESTS 1 CACHE INTERNAL "")
