--- a/driver/CMakeLists.txt
+++ b/driver/CMakeLists.txt
@@ -15,6 +15,7 @@ add_library(clickhouse-odbc SHARED
     handles.cpp
     info.cpp
     odbc.cpp
+    read_helpers.cpp
     result_set.cpp
     statement.cpp
     type_parser.cpp
