--- a/driver/odbc.ini
+++ b/driver/odbc.ini
@@ -2,7 +2,7 @@
 
 [ODBC Data Sources]
 clickhouse_localhost = Clickhouse
-clickhouse_localhostw = Clickhousew
+clickhouse_localhost_w = Clickhousew
 
 # Ansi
 [clickhouse_localhost]
@@ -17,5 +17,5 @@ description = Clickhouse driver
 #sslmode = require
 
 # Unicode
-[clickhouse_localhostw]
+[clickhouse_localhost_w]
 driver = Clickhousew
