--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,7 +1,12 @@
-if (TEST_DSN)
-    if (NOT (CMAKE_BUILD_TYPE_UC STREQUAL "TSAN" AND APPLE))
+if (NOT (CMAKE_BUILD_TYPE_UC STREQUAL "TSAN" AND APPLE))
+    if (TEST_DSN)
         add_test(NAME "test.pl" COMMAND env DSN=${TEST_DSN} ${CMAKE_CURRENT_SOURCE_DIR}/test.pl)
         add_test(NAME "test.sh" COMMAND env DSN=${TEST_DSN} ${CMAKE_CURRENT_SOURCE_DIR}/test.sh)
         add_test(NAME "test.py" COMMAND env DSN=${TEST_DSN} ${CMAKE_CURRENT_SOURCE_DIR}/test.py)
+    endif ()
+    if (TEST_DSN_W)
+        add_test(NAME "test.pl" COMMAND env DSN=${TEST_DSN_W} ${CMAKE_CURRENT_SOURCE_DIR}/test.pl)
+        add_test(NAME "test.sh" COMMAND env DSN=${TEST_DSN_W} ${CMAKE_CURRENT_SOURCE_DIR}/test.sh)
+        add_test(NAME "test.py" COMMAND env DSN=${TEST_DSN_W} ${CMAKE_CURRENT_SOURCE_DIR}/test.py)
     endif ()
 endif ()
