--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,8 +5,8 @@ if (NOT (CMAKE_BUILD_TYPE_UC STREQUAL "TSAN" AND APPLE))
         add_test(NAME "test.py" COMMAND env DSN=${TEST_DSN} ${CMAKE_CURRENT_SOURCE_DIR}/test.py)
     endif ()
     if (TEST_DSN_W)
-        add_test(NAME "test.pl w" COMMAND env DSN=${TEST_DSN_W} ${CMAKE_CURRENT_SOURCE_DIR}/test.pl)
-        add_test(NAME "test.sh w" COMMAND env DSN=${TEST_DSN_W} ${CMAKE_CURRENT_SOURCE_DIR}/test.sh)
-        add_test(NAME "test.py w" COMMAND env DSN=${TEST_DSN_W} ${CMAKE_CURRENT_SOURCE_DIR}/test.py)
+        add_test(NAME "test.pl-w" COMMAND env DSN=${TEST_DSN_W} ${CMAKE_CURRENT_SOURCE_DIR}/test.pl)
+        add_test(NAME "test.sh-w" COMMAND env DSN=${TEST_DSN_W} ${CMAKE_CURRENT_SOURCE_DIR}/test.sh)
+        add_test(NAME "test.py-w" COMMAND env DSN=${TEST_DSN_W} ${CMAKE_CURRENT_SOURCE_DIR}/test.py)
     endif ()
 endif ()
