--- a/.travis.yml
+++ b/.travis.yml
@@ -18,20 +18,18 @@ addons:
     packages: [ gcc-7, g++-7, ninja-build, clang ]
 
 env:
-    - MATRIX_EVAL="export UNICODE=0 CC=clang-7 CXX=clang++-7"
-    - MATRIX_EVAL="export UNICODE=0 CC=gcc-7   CXX=g++-7"
-    - MATRIX_EVAL="export UNICODE=1 CC=clang-7 CXX=clang++-7"
-    - MATRIX_EVAL="export UNICODE=1 CC=gcc-7   CXX=g++-7"
+    - MATRIX_EVAL="export CC=clang-7 CXX=clang++-7 ODBC_LIB=libiodbc2-dev"
+    - MATRIX_EVAL="export CC=gcc-7   CXX=g++-7     ODBC_LIB=libiodbc2-dev"
+    - MATRIX_EVAL="export CC=clang-7 CXX=clang++-7 ODBC_LIB=unixodbc-dev"
+    - MATRIX_EVAL="export CC=gcc-7   CXX=g++-7     ODBC_LIB=unixodbc-dev"
 
 install:
+  - eval "${MATRIX_EVAL}"
   - sudo apt-add-repository "deb http://archive.ubuntu.com/ubuntu artful main universe"
   - sudo apt-get update -q > build.log 2>&1 || (cat build.log && exit 1)
-  - sudo apt-get install -y unixodbc-dev libssl-dev binutils libpoco-dev | tee build.log 2>&1 || (cat build.log && exit 1)
-
-before_script:
-    - eval "${MATRIX_EVAL}"
+  - sudo apt-get install -y $ODBC_LIB libssl-dev binutils libpoco-dev | tee build.log 2>&1 || (cat build.log && exit 1)
 
 script:
   - mkdir -p build
   - cd build
-  - cmake .. -G Ninja -DUNICODE=$UNICODE -DCMAKE_CXX_COMPILER=`which $CXX` -DCMAKE_C_COMPILER=`which $CC` && ninja all && ninja test
+  - cmake .. -G Ninja -DCMAKE_CXX_COMPILER=`which $CXX` -DCMAKE_C_COMPILER=`which $CC` && ninja all && ninja test
