--- a/driver/config_cmake.h.in
+++ b/driver/config_cmake.h.in
@@ -15,7 +15,7 @@
 
 #cmakedefine ODBC_LIBRARIES "@ODBC_LIBRARIES@"
 #cmakedefine ODBC_INCLUDE_DIRECTORIES "@ODBC_INCLUDE_DIRECTORIES@"
-#cmakedefine CMAKE_LIBRARY_ARCHITECTURE "@CMAKE_LIBRARY_ARCHITECTURE@"
+#cmakedefine CMAKE_SYSTEM "@CMAKE_SYSTEM@"
 
 #    if !defined(UNICODE) && @UNICODE@
 #cmakedefine01 UNICODE
