--- a/contrib/CMakeLists.txt
+++ b/contrib/CMakeLists.txt
@@ -10,7 +10,9 @@ if (CLICKHOUSE_ODBC_TEST)
         add_subdirectory (nanodbc)
 
         # Fix iodbc include bug
-        set_target_properties(nanodbc PROPERTIES INCLUDE_DIRECTORIES "${ODBC_INCLUDE_DIRECTORIES};${CMAKE_CURRENT_SOURCE_DIR}/nanodbc")
+        if (NOT MSVC)
+            set_target_properties(nanodbc PROPERTIES INCLUDE_DIRECTORIES "${ODBC_INCLUDE_DIRECTORIES};${CMAKE_CURRENT_SOURCE_DIR}/nanodbc")
+        endif ()
         set_target_properties(nanodbc PROPERTIES INTERFACE_LINK_LIBRARIES "${ODBC_LIBRARIES}")
     endif ()
 endif ()
