--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,12 +1,12 @@
 if (NOT (CMAKE_BUILD_TYPE_UC STREQUAL "TSAN" AND APPLE))
     if (TEST_DSN)
-        add_test(NAME "test.pl" COMMAND env DSN=${TEST_DSN} ${CMAKE_CURRENT_SOURCE_DIR}/test.pl)
         add_test(NAME "test.sh" COMMAND env DSN=${TEST_DSN} ${CMAKE_CURRENT_SOURCE_DIR}/test.sh)
-        add_test(NAME "test.py" COMMAND env DSN=${TEST_DSN} ${CMAKE_CURRENT_SOURCE_DIR}/test.py)
+        add_test(NAME "test.pl" COMMAND perl ${CMAKE_CURRENT_SOURCE_DIR}/test.pl ${TEST_DSN})
+        add_test(NAME "test.py" COMMAND python ${CMAKE_CURRENT_SOURCE_DIR}/test.py ${TEST_DSN})
     endif ()
     if (TEST_DSN_W)
-        add_test(NAME "test.pl-w" COMMAND env DSN=${TEST_DSN_W} ${CMAKE_CURRENT_SOURCE_DIR}/test.pl)
         add_test(NAME "test.sh-w" COMMAND env DSN=${TEST_DSN_W} ${CMAKE_CURRENT_SOURCE_DIR}/test.sh)
-        add_test(NAME "test.py-w" COMMAND env DSN=${TEST_DSN_W} ${CMAKE_CURRENT_SOURCE_DIR}/test.py)
+        add_test(NAME "test.pl-w" COMMAND perl ${CMAKE_CURRENT_SOURCE_DIR}/test.pl ${TEST_DSN_W})
+        add_test(NAME "test.py-w" COMMAND python ${CMAKE_CURRENT_SOURCE_DIR}/test.py ${TEST_DSN_W})
     endif ()
 endif ()
