--- a/vs/driver32/driver32.vcxproj.filters
+++ b/vs/driver32/driver32.vcxproj.filters
@@ -80,6 +80,9 @@
     <ClCompile Include="..\..\driver\result_set.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\driver\read_helpers.cpp">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\driver\statement.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
