--- a/vs/driver64w/driver64w.vcxproj
+++ b/vs/driver64w/driver64w.vcxproj
@@ -184,6 +184,7 @@
     <ClCompile Include="..\..\driver\odbc.cpp" />
     <ClCompile Include="..\..\driver\log.cpp" />
     <ClCompile Include="..\..\driver\result_set.cpp" />
+    <ClCompile Include="..\..\driver\read_helpers.cpp" />
     <ClCompile Include="..\..\driver\statement.cpp" />
     <ClCompile Include="..\..\driver\type_parser.cpp" />
     <ClCompile Include="..\..\driver\win\dllmain.cpp" />
