Support null. THIS COMMIT BREAKS COMPATIBILITY WITH CLICKHOUSE < 18.10.3 (#79)

--- a/driver/CMakeLists.txt
+++ b/driver/CMakeLists.txt
@@ -47,6 +47,7 @@ add_library(${libname} SHARED
     handles.cpp
     info.cpp
     odbc.cpp
+    read_helpers.cpp
     result_set.cpp
     statement.cpp
     type_parser.cpp
