--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: clickhouse-odbc
 Priority: optional
 Maintainer: Alexey Milovidov <milovidov@yandex-team.ru>
-Build-Depends: debhelper (>= 9), cmake3 | cmake, ninja-build, lsb-release, unixodbc-dev | libiodbc2-dev
+Build-Depends: debhelper (>= 9), cmake3 | cmake, lsb-release, unixodbc-dev | libiodbc2-dev
 Standards-Version: 4.1.1
 Homepage: https://clickhouse.yandex
 
