Add .so load test

--- a/driver/ut/CMakeLists.txt
+++ b/driver/ut/CMakeLists.txt
@@ -32,3 +32,14 @@ if (NANOODBC_LIBRARY)
     endif ()
     # gdb -ex "catch throw" -ex run --args ./clickhouse-odbc-nano DSN=clickhouse_localhost_system
 endif ()
+
+add_executable(load-ut load.cpp)
+target_link_libraries(load-ut ${Poco_Foundation_LIBRARY} ${CMAKE_DL_LIBS} Threads::Threads)
+if (WIN32)
+   target_link_libraries(load-ut Iphlpapi)
+endif()
+if(ODBC_INCLUDE_DIRECTORIES)
+    target_include_directories(load-ut PRIVATE ${ODBC_INCLUDE_DIRECTORIES})
+endif()
+add_test(NAME "load-ut" COMMAND load-ut $<TARGET_FILE:clickhouse-odbc>)
+add_test(NAME "load-ut-w" COMMAND load-ut $<TARGET_FILE:clickhouse-odbcw>)
