--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,9 @@ language: cpp
 sudo: required
 dist: trusty
 
-os: linux
+os:
+  - linux
+  - osx
 
 compiler:
   - gcc
@@ -25,9 +27,10 @@ env:
 
 install:
   - eval "${MATRIX_EVAL}"
-  - sudo apt-add-repository "deb http://archive.ubuntu.com/ubuntu artful main universe"
-  - sudo apt-get update -q > build.log 2>&1 || (cat build.log && exit 1)
-  - sudo apt-get install -y $ODBC_LIB libssl-dev binutils libpoco-dev | tee build.log 2>&1 || (cat build.log && exit 1)
+  - [ "$TRAVIS_OS_NAME" == "linux" ] && sudo apt-add-repository "deb http://archive.ubuntu.com/ubuntu artful main universe"
+  - [ "$TRAVIS_OS_NAME" == "linux" ] && sudo apt-get update -q > build.log 2>&1 || (cat build.log && exit 1)
+  - [ "$TRAVIS_OS_NAME" == "linux" ] && sudo apt-get install -y $ODBC_LIB libssl-dev binutils libpoco-dev | tee build.log 2>&1 || (cat build.log && exit 1)
+  - [ "$TRAVIS_OS_NAME" == "osx" ] && brew install libiodbc
 
 script:
   - mkdir -p build
