--- a/.travis.yml
+++ b/.travis.yml
@@ -27,10 +27,10 @@ env:
 
 install:
   - eval "${MATRIX_EVAL}"
-  - [ "$TRAVIS_OS_NAME" == "linux" ] && sudo apt-add-repository "deb http://archive.ubuntu.com/ubuntu artful main universe"
-  - [ "$TRAVIS_OS_NAME" == "linux" ] && sudo apt-get update -q > build.log 2>&1 || (cat build.log && exit 1)
-  - [ "$TRAVIS_OS_NAME" == "linux" ] && sudo apt-get install -y $LINUX_ODBC_LIB libssl-dev binutils libpoco-dev | tee build.log 2>&1 || (cat build.log && exit 1)
-  - [ "$TRAVIS_OS_NAME" == "osx" ] && brew install $OSX_ODBC_LIB
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-add-repository "deb http://archive.ubuntu.com/ubuntu artful main universe; fi"
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then  sudo apt-get update -q > build.log 2>&1 || (cat build.log && exit 1); fi
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then  sudo apt-get install -y $LINUX_ODBC_LIB libssl-dev binutils libpoco-dev | tee build.log 2>&1 || (cat build.log && exit 1); fi
+  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then brew install $OSX_ODBC_LIB; fi
 
 script:
   - mkdir -p build
